--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
-name = makemake
+name = makemake90
 version = 0.1
 author = Jan Berges
 author_email =
 description = Generate Makefiles for modular Fortran programs
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/janberges/makemake
+url = https://github.com/janberges/makemake90
 classifiers =
     Programming Language :: Python
     License :: Freely Distributable
@@ -15,4 +15,4 @@ classifiers =
 [options]
 python_requires = >=2.7
 scripts =
-    makemake.py
+    makemake90
