Replace script by module and entry point

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,4 @@ classifiers = [
     "Operating System :: POSIX :: Linux",
 ]
 requires-python = ">=2.7"
-
-[tool.setuptools]
-script-files = ["makemake90"]
+scripts = {makemake90 = "makemake90:main"}
