Ensure that module is included in package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,6 @@ classifiers = [
 ]
 requires-python = ">=2.7"
 scripts = {makemake90 = "makemake90:main"}
+
+[tool.setuptools]
+py-modules = ['makemake90']
