--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,8 @@ description = "Generate Makefiles for modular Fortran programs"
 readme = "README.md"
 urls = {Homepage = "https://github.com/janberges/makemake90"}
 classifiers = [
+    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
     "Programming Language :: Python",
-    "License :: Freely Distributable",
-    "Operating System :: POSIX :: Linux",
 ]
 requires-python = ">=2.7"
 scripts = {makemake90 = "makemake90:main"}
